--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
       <!-- main content container -->
       <div class="flex flex-col mid:flex-row">
         <!-- shape card container -->
-        <div class="flex-1 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+        <div class="flex-1 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10">
           <!-- Triangle Card -->
-          <div class="card bg-base-100 w-96 shadow-sm">
+          <div class="card bg-base-100 w-96 shadow-xl">
             <figure>
               <img src="images/triangle.png" alt="Shoes" />
             </figure>
@@ -60,11 +60,11 @@
             </div>
           </div>
           <!-- Rectangle Card -->
-          <div class="card bg-base-100 w-96 shadow-sm">
+          <div class="card bg-base-100 w-96 shadow-xl">
             <figure>
               <img src="images/rectangle.png" alt="Shoes" />
             </figure>
-            <div class="card-body">
+            <di v class="card-body">
               <h2 class="card-title">Rectangle</h2>
               <p class="text-center text-2xl">Area (A) = w X I</p>
               <div class="flex">
@@ -83,7 +83,7 @@
                   class="w-24 text-2xl p-2 rounded-sm"
                   placeholder="w"
                 />
-                <span class="mr-4 ml-2">cm</span>
+                <span class="ml-2 mr-4">cm</span>
               </div>
               <div>
                 <p class="text-2xl">
@@ -100,48 +100,95 @@
                 </button>
               </div>
             </div>
-          </div>
-          <!-- Triangle card -->
-          <div class="card bg-base-100 w-96 shadow-sm">
+          <!-- Parallelogram card -->
+          <div class="card bg-base-100 w-96 shadow-xl">
             <figure>
               <img
-                src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp"
+                src="images/parallelogram.png"
                 alt="Shoes"
               />
             </figure>
             <div class="card-body">
-              <h2 class="card-title">Card Title</h2>
-              <p>
-                A card component has a figure, a body part, and inside body
-                there are title and actions parts
-              </p>
+              <h2 class="card-title">Parallelogram</h2>
+              <p class="text-center text-2xl">Area (A) = b X h</p>
+              <div>
+                <input class="w-24 text-2xl p-2 rounded-sm" type="text" name="" id="parallelogram-base" placeholder="base">
+                <span class="ml-2 mr-4">cm</span>
+
+                <input class="w-24 text-2xl p-2 rounded-sm" type="text" name="" id="parallelogram-height" placeholder="height">
+                <span class="ml-2 mr-4">cm</span>
+              </div>
+              <div>
+                <p class="text-2xl">Area: <span id="parallelogram-area"> </span>cm <sup>2</sup></p>
+              </div>
+
               <div class="card-actions justify-end">
-                <button class="btn btn-primary">Buy Now</button>
+                <button onclick="calculateParallelogramArea()" class="btn btn-primary w-full">Calculate</button>
               </div>
             </div>
           </div>
-          <!-- Triangle card -->
-          <div class="card bg-base-100 w-96 shadow-sm">
+          <!-- Rhombus card -->
+          <div class="card bg-base-100 w-96 shadow-xl">
             <figure>
               <img
-                src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp"
+                src="images/rhombus.png"
                 alt="Shoes"
               />
             </figure>
             <div class="card-body">
-              <h2 class="card-title">Card Title</h2>
+              <h2 class="card-title">Rhombus</h2>
               <p>
                 A card component has a figure, a body part, and inside body
                 there are title and actions parts
               </p>
               <div class="card-actions justify-end">
-                <button class="btn btn-primary">Buy Now</button>
+                <button class="btn btn-primary w-full">Buy Now</button>
+              </div>
+            </div>
+          </div>
+          <!-- Pentagon card -->
+          <div class="card bg-base-100 w-96 shadow-xl">
+            <figure>
+              <img
+                src="images/pentagon.png"
+                alt="Shoes"
+              />
+            </figure>
+            <div class="card-body">
+              <h2 class="card-title">Pentagon</h2>
+              <p>
+                A card component has a figure, a body part, and inside body
+                there are title and actions parts
+              </p>
+              <div class="card-actions justify-end">
+                <button class="btn btn-primary w-full">Buy Now</button>
+              </div>
+            </div>
+          </div>
+
+          <!-- Ellipse card -->
+          <div class="card bg-base-100 w-96 shadow-xl">
+            <figure>
+              <img
+                src="images/ellipse.png"
+                alt="Shoes"
+              />
+            </figure>
+            <div class="card-body">
+              <h2 class="card-title">Ellipse</h2>
+              <p>
+                A card component has a figure, a body part, and inside body
+                there are title and actions parts
+              </p>
+              <div class="card-actions justify-end">
+                <button class="btn btn-primary w-full">Buy Now</button>
               </div>
             </div>
           </div>
         </div>
-        <!-- Area calculation container -->
-        <div class="w-96 border-2 border-gray-700 rounded-md">
+      </div>
+      <!-- Area calculation container -->
+      <div class="w-96 border-2 border-gray-700 rounded-md">
           <h3 class="text-3lx text-center p-4">Area calculation</h3>
         </div>
       </div>
@@ -149,5 +196,6 @@
 
     <script src="scripts/triangle-calculate.js"></script>
     <script src="scripts/rectangle-area.js"></script>
+    <script src="parallelogram-area.js"></script>
   </body>
 </html>
