added Pentagon file

--- a/index.html
+++ b/index.html
@@ -156,12 +156,16 @@
             </figure>
             <div class="card-body">
               <h2 class="card-title">Pentagon</h2>
-              <p>
-                A card component has a figure, a body part, and inside body
-                there are title and actions parts
-              </p>
+              <p class="text-center text-2xl">Area (A) = 0.5 X p X b</p>
+              <div class="flex gap-5">
+                <input class="w-24 text-2xl p-2 rounded-sm" type="text" name="" id="pentagon-perimeter" placeholder="peri">
+                <input class="w-24 text-2xl p-2 rounded-sm" type="text" name="" id="pentagon-apothem" placeholder="apo">
+              </div>
+              <div>
+                <p class="text-2xl">Area: <span id="pentagon-area">0</span></p>
+              </div>
               <div class="card-actions justify-end">
-                <button class="btn btn-primary w-full">Buy Now</button>
+                <button onclick="calculatePentagonArea()" class="btn btn-primary w-full">Calculate</button>
               </div>
             </div>
           </div>
@@ -197,5 +201,6 @@
     <script src="scripts/triangle-calculate.js"></script>
     <script src="scripts/rectangle-area.js"></script>
     <script src="parallelogram-area.js"></script>
+    <script src="pentagon-area.js"></script>
   </body>
 </html>
