--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   </head>
   <body class="m-8">
-    <header></header>
 
-    <main>
+  <main>
       <!-- main content container -->
       <div class="flex flex-col mid:flex-row">
         <!-- shape card container -->
@@ -119,7 +118,7 @@
                 <span class="ml-2 mr-4">cm</span>
               </div>
               <div>
-                <p class="text-2xl">Area: <span id="parallelogram-area"> </span>cm <sup>2</sup></p>
+                <p class="text-2xl">Area: <span id="parallelogram-area"> 0 </span>cm <sup>2</sup></p>
               </div>
 
               <div class="card-actions justify-end">
@@ -169,7 +168,6 @@
               </div>
             </div>
           </div>
-
           <!-- Ellipse card -->
           <div class="card bg-base-100 w-96 shadow-xl">
             <figure>
@@ -180,27 +178,28 @@
             </figure>
             <div class="card-body">
               <h2 class="card-title">Ellipse</h2>
-              <p>
-                A card component has a figure, a body part, and inside body
-                there are title and actions parts
-              </p>
+              <p class="text-center text-2xl">Area (A) = π * p * b</p>
+              <div class="flex gap-5">
+                <input class="w-24 text-2xl p-2 rounded-sm" type="text" name="" id="ellipse-major-radius" placeholder="major">
+                <input class="w-24 text-2xl p-2 rounded-sm" type="text" name="" id="ellipse-minor-radius" placeholder="minor">
+              </div>
+              <div>
+                <p class="text-2xl">Area: <span id="ellipse-area">0</span></p>
+              </div>
               <div class="card-actions justify-end">
-                <button class="btn btn-primary w-full">Buy Now</button>
+                <button onclick="calculateEllipseArea()" class="btn btn-primary w-full">Calculate</button>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <!-- Area calculation container -->
-      <div class="w-96 border-2 border-gray-700 rounded-md">
-          <h3 class="text-3lx text-center p-4">Area calculation</h3>
-        </div>
-      </div>
-    </main>
+    </div>
+  </main>
 
     <script src="scripts/triangle-calculate.js"></script>
     <script src="scripts/rectangle-area.js"></script>
-    <script src="parallelogram-area.js"></script>
-    <script src="pentagon-area.js"></script>
+    <script src="scripts/parallelogram-area.js"></script>
+    <script src="scripts/pentagon-area.js"></script>
+    <script src="scripts/ellipse-area.js"></script>
   </body>
 </html>
